Fix dropdown menu z-index in experiments and projects pages [SCI-8449]

--- a/app/assets/stylesheets/experiments.scss
+++ b/app/assets/stylesheets/experiments.scss
@@ -12,6 +12,8 @@
     width: 36px;
 
     .dropdown-menu {
+      z-index: 9;
+
       a,
       button {
         @include font-button;
